Tests/Modules/Error/Chain/.build/alwaysfails.pr
{
  "name": "AlwaysFails",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "throw error \u0022always fails\u0022",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "always fails",
              "type": "tstring"
            },
            {
              "name": "StatusCode",
              "value": 500,
              "type": "int"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": null,
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Modules/Error/Chain/AlwaysFails.goal",
  "prPath": "/Modules/Error/Chain/.build/alwaysfails.pr",
  "hash": "a91369207d3e67d7d3fbc2cc7a0fc4e6f2a7558d1ae6c543d01237f04ad35098",
  "builderVersion": "0.2.2",
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}